tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_7.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := ((((0 DIV x) MOD (+ x)) # ((- 1223) - (+ y))) & (((z MOD 1223) DIV (y MOD x)) = ((x MOD x) * (1223 MOD y))));
               x := (((- (+ y)) * ((0 * 200) * (200 DIV z))) DIV (- (+ (1223 - x))));
               z := ((- ((0 DIV y) MOD (200 * x))) MOD (- (- (y MOD 1))));
               z := ((((z - z) DIV (2 DIV 1)) MOD (- (0 - 1223))) * (((- 1) + (0 * x)) * ((0 - x) DIV (z * 0))));
               r := ((((1 DIV y) * (x * 0)) * ((200 * 1223) * (1223 - 1))) = ((+ (0 - z)) * ((+ 2) + (- y))));
               p := ((((y - y) + (0 + 0)) + ((+ 1) - (1223 - 0))) >= (((+ z) DIV (x DIV 0)) DIV (+ (0 - 1223))));
               y := ((((1 + 1223) * (1 - z)) + ((- 1223) DIV (z - 2))) - (((200 + x) - (0 DIV x)) * ((1 MOD 2) MOD (2 - 200))));
               r := (~ (~ ((z + 200) <= (y - 1223))));
               z := (- (((0 + 2) MOD (- x)) - (+ (1223 - 2))));
  (* error *)  z := ((((+ p) DIV (0 DIV 1)) * ((- 1) - (1223 DIV 0))) DIV (- (+ (1 + y))))
END Test20.